syntax = "proto3";

package turnly.business_management.v1.access_tokens;

import "access-tokens.requests.proto";
import "access-tokens.responses.proto";

service AccessTokens {
  rpc Create(CreateAccessTokenRequest) returns (CreateAccessTokenResponse) {}
  rpc Exchange(ExchangeAccessTokenRequest) returns (ExchangeAccessTokenResponse) {}
  rpc GetOne(GetAccessTokenRequest) returns (GetAccessTokenResponse) {}
}
